# SVT-TestAgent

./: .gitignore  README.md  TODO.md  cmd_handler.py  config.py  pyproject.toml  test_agent.py  testsystem_client.py  utils.py
Dev/: startup.py
Dev/Kafka/: docker-compose.yml
Dev/Kafka/db-agent/: Dockerfile
ExternalDummies/: TopicCreation.py  send_request.py  test_message.json
Registries/: __init__.py  registryOfCommands.py  registryOfTests.py  validateTests.py
TestAgent/: _init_.py  cmd_handler.py  config.py  db_client.py  kafka_port.json  test_agent.py  testsystem_client.py
TestAgent/Dev/Kafka/: docker-compose.yml
TestAgent/ExternalDummies/: send_request.py  test_message.json  test_message_getTest.json  test_message_loop.json
TestAgent/Registries/: registryOfCommands.py  validateTests.py
TestAgent/testSystemBackend/: emulator.py  interface.py  real_backend.py
TestAgent/testagent.egg-info/: PKG-INFO  SOURCES.txt
testagent.egg-info/: entry_points.txt  top_level.txt
